--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "platzi-intro-react-base",
   "version": "0.1.0",
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-scripts": "5.0.1",
+    "react-icons": "^4.10.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
